add log feature

--- a/src/04.Presentation/MaktabGram.Presentation.RazorPages/appsettings.Development.json
+++ b/src/04.Presentation/MaktabGram.Presentation.RazorPages/appsettings.Development.json
@@ -1,9 +1,7 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "AppConnectionString": "Server=localhost;Database=MaktabGramDb;user id=sa;password=25915491;trust server certificate=true;",
+    "LogConnectionString": "Server=localhost;Database=ApplicationLog;User Id=sa;Password=25915491;Encrypt=false;TrustServerCertificate=true;",
+    "HangfireConnectionString": "Server=localhost;Database=HangfireTest;User Id=sa;Password=25915491;Encrypt=false;TrustServerCertificate=true;"
   }
 }
