--- a/src/04.Presentation/MaktabGram.Presentation.RazorPages/appsettings.json
+++ b/src/04.Presentation/MaktabGram.Presentation.RazorPages/appsettings.json
@@ -1,13 +1,7 @@
 {
   "ConnectionStrings": {
-    "HangfireConnection": "Server=localhost;Database=HangfireTest;user id=sa;password=25915491;trust server certificate=true;"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Hangfire": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "AppConnectionString": "Server=localhost;Database=MaktabGramDb;user id=sa;password=25915491;trust server certificate=true;",
+    "LogConnectionString": "Server=localhost;Database=ApplicationLog;User Id=sa;Password=25915491;Encrypt=false;TrustServerCertificate=true;",
+    "HangfireConnectionString": "Server=localhost;Database=HangfireTest;User Id=sa;Password=25915491;Encrypt=false;TrustServerCertificate=true;"
+  }
 }
