--- a/src/04.Presentation/MaktabGram.Presentation.RazorPages/MaktabGram.Presentation.RazorPages.csproj
+++ b/src/04.Presentation/MaktabGram.Presentation.RazorPages/MaktabGram.Presentation.RazorPages.csproj
@@ -18,6 +18,11 @@
 	  <PackageReference Include="Hangfire.SqlServer" Version="1.8.*" />
 	  <PackageReference Include="Hangfire.AspNetCore" Version="1.8.*" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="*" />
+	  <PackageReference Include="Serilog" Version="4.3.0" />
+	  <PackageReference Include="Serilog.AspNetCore" Version="10.0.0" />
+	  <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
+	  <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="9.0.2" />
+	  <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
 	  
   </ItemGroup>
 
