--- a/src/03.Infrastructure/MaktabGram.Infrastructure.EfCore/MaktabGram.Infrastructure.EfCore.csproj
+++ b/src/03.Infrastructure/MaktabGram.Infrastructure.EfCore/MaktabGram.Infrastructure.EfCore.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.21">
       <PrivateAssets>all</PrivateAssets>
